# pneumatic-actuator

./: .gitignore  1_ODE_system_example.py  2_odeint_and_solve_ivp.py  3_rabbits_and_foxes.py  5_Matplotlib_test.py  Kv-dzeta.py  pyproject.toml  single-acting-fill.py  single-acting-fill_v2.py  single-acting-fill_v3.py  single-acting-fill_v4.py  single-acting-fill_v5.py  single_acting_fill_v5.py  single_acting_fill_v6.py  test.py
empiric_data/: Время срабатывания приводов.docx
flowcalc/: kv_dzeta.py
stroking_time/: constants.py  device_db.py  friction.py  initial_data.py  single_acting_fill_v6.py  single_acting_fill_v7.py  single_acting_fill_v8.py  todo.txt  valve_and_actuator_data.py  valve_and_actuator_data_orig.py
